--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    
-
-    }
-    .highlight_section{
-    
+        align-items: center;
     }
     .phone{
     margin: 50px auto;
@@ -221,4 +216,25 @@
         position: absolute;
         border-bottom-right-radius: 100%;
         left: -1rem;
+    }
+    .highlight-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0px 2rem;
+
+    }
+    .highlight-section h1{
+        font-weight: 500;
+        font-size: 2.5rem;
+
+    }
+    .highlight-section p{
+        line-height: 1.7rem;
+        color: gray;
+        font-size: 1rem;
+        margin: 2rem 0rem;
+        
     }
